--- a/JavaScript/JS-40.html
+++ b/JavaScript/JS-40.html
@@ -1,19 +1,142 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P05">JS:P05 > reference : part-four</h1>
+<h1 id="P05">JS:P05 >  reference : RegExp</h1>
 <a href="JS-41.html">Next</a><a href="JS-39.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
 <pre>
 --------------------------------------------------------------------------------
-reference
+introduction
+--------------------------------------------------------------------------------
+# a regular expression is an object that describes a pattern of characters 
+# regular expressions are used to perform pattern-matching and (search-and-replace) functions on (text) 
+  syntax > /pattern/modifiers; 
+  like   > var patt = /w3schools/i
+- example explained 
+  > /w3schools/1 - is a regular expression 
+  > w3schools    - is a pattern (to be used in a search) 
+  > i            - is a modifier (modifiers the search to be case-insensitive) 
+  
+--------------------------------------------------------------------------------
+modifiers
+--------------------------------------------------------------------------------
+# modifieres are used to perform case-insensitive and global searches 
+
+01. g - Perform a global match (find all matches rather than stopping after the first match)
+02. i - Perform case-insensitive matching
+03. m - Perform multiline matching
+
+--------------------------------------------------------------------------------
+brackets
+--------------------------------------------------------------------------------
+# Brackets are used to find a range of characters
+
+01. [abc]  - Find any character between the brackets
+02. [^abc] - Find any character NOT between the brackets
+03. [0-9]  - Find any character between the brackets (any digit)
+04. [^0-9] - Find any character NOT between the brackets (any non-digit)
+05. (x|y)  - Find any of the alternatives specified
+
+--------------------------------------------------------------------------------
+metacharacters
+--------------------------------------------------------------------------------
+# Metacharacters are characters with a special meaning:
+
+01. .      - Find a single character, except newline or line terminator
+02. \w     - Find a word character
+03. \W     - Find a non-word character
+04. \d     - Find a digit
+05. \D     - Find a non-digit character
+06. \s     - Find a whitespace character
+07. \S     - Find a non-whitespace character
+08. \b     - Find a match at the beginning/end of a word, beginning like this: \bHI, end like this: HI\b
+09. \B     - Find a match, but not at the beginning/end of a word
+10. \0     - Find a NULL character
+11. \n     - Find a new line character
+12. \f     - Find a form feed character
+13. \r     - Find a carriage return character
+14. \t     - Find a tab character
+15. \v     - Find a vertical tab character
+16. \xxx   - Find the character specified by an octal number xxx
+17. \xdd   - Find the character specified by a hexadecimal number dd
+18. \udddd - Find the Unicode character specified by a hexadecimal number dddd
+
+--------------------------------------------------------------------------------
+Quantifiers
+--------------------------------------------------------------------------------
+01. n+     - Matches any string that contains at least one n
+02. n*     - Matches any string that contains zero or more occurrences of n
+03. n?     - Matches any string that contains zero or one occurrences of n
+04. n{X}   - Matches any string that contains a sequence of X n's
+05. n{X,Y} - Matches any string that contains a sequence of X to Y n's
+06. n{X,}  - Matches any string that contains a sequence of at least X n's
+07. n$     - Matches any string with n at the end of it
+08. ^n     - Matches any string with n at the beginning of it
+09. ?=n    - Matches any string that is followed by a specific string n
+10. ?!n    - Matches any string that is not followed by a specific string n
+
+--------------------------------------------------------------------------------
+RegExp Object Properties
+--------------------------------------------------------------------------------
+# source 	Returns the text of the RegExp pattern
+
+01. constructor - Returns the function that created the RegExp object's prototype
+02. global      - Checks whether the "g" modifier is set
+03. ignoreCase  - Checks whether the "i" modifier is set
+04. lastIndex   - Specifies the index at which to start the next match
+05. multiline   - Checks whether the "m" modifier is set
+
+--------------------------------------------------------------------------------
+RegExp Object Methods
+--------------------------------------------------------------------------------
+01. compile()  - Deprecated in version 1.5. Compiles a regular expression
+02. exec()     - Tests for a match in a string. Returns the first match
+03. test()     - Tests for a match in a string. Returns true or false
+04. toString() - Returns the string value of the regular expression
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+modifiers
 --------------------------------------------------------------------------------
 
 </pre>
 
+<pre>
+--------------------------------------------------------------------------------
+brackets
+--------------------------------------------------------------------------------
 
+</pre>
 
+<pre>
+--------------------------------------------------------------------------------
+metacharacters
+--------------------------------------------------------------------------------
+
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+Quantifiers
+--------------------------------------------------------------------------------
+
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+RegExp Object Properties
+--------------------------------------------------------------------------------
+
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+RegExp Object Methods
+--------------------------------------------------------------------------------
+
+</pre>
 
 
 
