--- a/JavaScript/back/JS-41.html
+++ b/JavaScript/back/JS-41.html
@@ -1,13 +1,20 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P05">JS:P05 > reference </h1>
-<a href="#">Next</a><a href="JS-41.html">Previous</a><a href="JS-01.html">Home</a>
+<h1 id="P06">JS:P06 > library and framework : part-one</h1>
+<a href="JS-42.html">Next</a><a href="JS-40.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
 <pre>
 --------------------------------------------------------------------------------
+jQuery
+--------------------------------------------------------------------------------
 
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+node-js
 --------------------------------------------------------------------------------
 
 </pre>
