Initial notes on javascript, reference w3schools - update 11

--- a/JavaScript/JS-38.html
+++ b/JavaScript/JS-38.html
@@ -22,16 +22,12 @@ introduction
   like > var y = new Boolean(false); 
 - do not create boolean objects. it slows down execution speed 
   the (new) keyword complicates the code. this can produce some unexpected results 
-
 --------------------------------------------------------------------------------
-properties 
---------------------------------------------------------------------------------
+# there are two (02) properties 
 01. constructor - returns the function that created javascript's boolean prototype 
 02. prototype   - allows you to add properties and methods to the boolean prototype 
-
 --------------------------------------------------------------------------------
-methods 
---------------------------------------------------------------------------------
+# there are two (02) methods 
 01. toString() - converts a boolean value to a string, and returns the result 
 02. valueOf()  - returns the primitive value of a boolean 
 </pre>
